<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/order_card_view"
        android:layout_width="375dp"
        android:layout_height="117dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="81dp"
                android:layout_height="120dp"
                android:src="@drawable/ordered_state"
                android:contentDescription="desc" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_margin="2dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_price_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/destination_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/src_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/source_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dest_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/state_text_view"
                android:layout_width = "wrap_content"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="4dp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                android:textAlignment="textStart"
                android:layout_height="wrap_content"
                android:text="@string/delivered_state"
                android:textSize="25sp"
                android:textStyle="italic" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>