<?xml version="1.0" encoding="utf-8"?>

<!--<androidx.recyclerview.widget.RecyclerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/recyclerView"
    >-->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:background="#efefef"
        android:gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="117dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="55dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
             android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:src="@drawable/ordered_state"
                android:contentDescription="ordered state image"></ImageView>
            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_gravity="start"
                android:orientation="vertical"
                android:layout_margin="2dp">
                >
                <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label"
            android:textStyle="bold"
            android:textSize="25sp" />
                <TextView
                    android:id="@+id/total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/destination"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="20sp" />
            </LinearLayout>
            <TextView
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/delivered_state"
                android:textSize="25sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
<!--</androidx.recyclerview.widget.RecyclerView>-->